# noctisroll

./: .cspell.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.changes/: bump-deps-all.md  bump-deps.md  bump-rig.md  config.json  config.toml  criticals----critical.md  filter.md  lifetime.md  lint-apply.md  math.md  refactor-dice.md  refactor-grammar.md  rewrite-core.md  rig-tool.md  roll-string.md  sign.md
.github/workflows/: code-lint.yml  covector-version-or-publish.yml  semifold-ci.yaml  semifold-status.yaml
examples/: basic.rs  eval.rs  fate.rs  pool.rs  rig-agent.rs
src/: core.rs  error.rs  lib.rs  roll.lalrpop  tool.rs  utils.rs
src/dice/: composite.rs  exploding.rs  fate.rs  mod.rs  pool.rs  standard.rs
src/parser/: dice.pest  mod.rs  pest_parser.rs
tests/: basic.rs
