[package]
name = "noctisroll"
version = "0.2.0"
edition = "2021"
authors = ["苏向夜 <fu050409@163.com>"]
description = "A modern, modular TRPG dice rolling system implementing the OneDice standard"
license = "AGPL-3.0-only"
repository = "https://github.com/noctisynth/noctisroll"
readme = "README.md"
keywords = ["dice", "trpg", "rpg", "random", "onedice"]
homepage = "https://github.com/noctisynth/noctisroll"

[features]
default = ["parser"]
parser = ["dep:pest", "dep:pest_derive"]

[dependencies]
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

# Optional parser dependencies
pest = { version = "2.8.6", optional = true }
pest_derive = { version = "2.8.6", optional = true }

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.11.0"
