[package]
name = "noctisroll"
version = "0.2.1"
edition = "2021"
authors = ["苏向夜 <fu050409@163.com>"]
description = "A modern, modular TRPG dice rolling system implementing the OneDice standard"
license = "AGPL-3.0-only"
repository = "https://github.com/noctisynth/noctisroll"
readme = "README.md"
keywords = ["dice", "onedice", "random", "rpg", "trpg"]
homepage = "https://github.com/noctisynth/noctisroll"

[dependencies]
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

# Optional parser dependencies
pest = { version = "2.8.6", optional = true }
pest_derive = { version = "2.8.6", optional = true }
rig-core = { version = "0.35.0", features = ["derive"], optional = true }
rig-derive = { version = "0.1.11", optional = true }
serde_json = { version = "1.0.149", optional = true }

[dev-dependencies]
criterion = "0.8.2"
dotenvy = "0.15.7"
proptest = "1.11.0"
tokio = { version = "1.50.0", features = ["full"] }

[features]
default = ["parser", "tool-call"]
parser = ["dep:pest", "dep:pest_derive"]
tool-call = ["dep:rig-core", "dep:rig-derive", "dep:serde_json"]
